--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "open-plugin-settings",
-	"name": "Open Plugin Settings",
-	"version": "1.3.2",
+	"id": "settings-jump",
+	"name": "Settings jump",
+	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Create a command to open a specified plugin settings.",
-	"author": "Mara-Li",
-	"authorUrl": "https://github.com/Mara-Li",
-	"fundingUrl": "https://ko-fi.com/Mara__Li",
-	"isDesktopOnly": false
+	"description": "Commands to jump to some settings",
+	"author": "Tal Wrii",
+	"authorUrl": "https://readwithai.substack.com/",
+	"fundingUrl": "https://ko-fi.com/readwithai",
+	"isDesktopOnly": true
 }
